# SelectPop

./: .gitignore  README.md  electron-builder.yml  main.js  package-lock.json  package.json
assets/: PORTABLE-README.txt
assets/powershell/: get-foreground.ps1  list-installed-apps.ps1  read-selection.ps1  record-hotkey.ps1  send-input.ps1
main/: ai-window-policy.js  ai-window-policy.test.js  ai-window.js  clipboard.js  clipboard.test.js  config.js  config.test.js  copy-app-rules.js  copy-app-rules.test.js  defaults.js  foreground.js  helper-runtime-controller.js  helper-runtime-controller.test.js  hook.js  hotkey-recorder.js  icon-service.js  input-sender.js  installed-apps.js  installed-apps.test.js  launch-on-boot.js  launch-on-boot.test.js  logger.js  main.js  markdown.js  native-client.js  native-client.test.js  paths.js  popup-auto-hide.js  popup-auto-hide.test.js  popup-layout.js  popup-layout.test.js  popup.js  selection-foreground-guard.js  selection-foreground-guard.test.js  selection-popup-controller.js  selection-popup-controller.test.js  selection-recovery.js  selection-recovery.test.js  selection-service.js  selection-service.test.js  (+9 more)
main/actions/: copy.js  hotkey.js  url.js
main/ai/: index.js  network.js  openai.js  web-translators.js  web-translators.test.js
native/: CMakeLists.txt
native/build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
native/src/: main.cpp  process-filter.cpp  process-filter.h  risk-blocker.cpp  risk-blocker.h
native/tests/: process-filter.test.cpp  risk-blocker.test.cpp
preload/: ai-window.cjs  popup.cjs  settings.cjs
renderer/ai-window/: ai-window.css  ai-window.js  index.html
renderer/popup/: index.html  popup.css  popup.js
renderer/settings/: index.html  settings.css  settings.js
renderer/shared/: icons.js
scripts/: app-builder.cmd  build-native.mjs  dist-portable.cmd  dist-portable.mjs  run-electron-builder.mjs  smoke-portable.mjs  zip-portable.mjs
shared/: icons.js  process-name.js  toolbar-metrics.js  url-tool.js
